k8s/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: team-halima
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
