k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: team-halima
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 3000
type: ClusterIP
